--- a/pages/main/index.html
+++ b/pages/main/index.html
@@ -27,5 +27,13 @@
         </nav>
         <a class="design-link" href="https://www.figma.com/file/jfEFwkXVj1WRq7sUHDr8os/PetStory-online">Designed by <span>&copy;</span></a>
     </header>
+    <main>
+        <section class="watch">
+            <h2 class="watch-header">
+                Watch your <span>favorite</span> animal online
+            </h2>
+            <button class="watch-online">watch online</button>
+        </section>
+    </main>
 </body>
 </html>
