--- a/pages/main/index.html
+++ b/pages/main/index.html
@@ -1,39 +1,45 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>PetStory online</title>
-    <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="../../assets/styles/noramilze.css">
-    <link rel="icon" href="../../assets/icons/panda.svg">
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>PetStory online</title>
+  <link rel="stylesheet" href="style.css">
+
+  <link rel="icon" href="../../assets/icons/panda.svg">
 </head>
+
 <body>
-    <header>
-        <div class="logo">
-            <a href="#about">
-                <h1 class="logo-text">PetStory online</h1>
-            </a>
-        </div>
-        <nav>
-            <ul class="nav-list">
-                <li class="nav-list-item"><a href="#about">About</a></li>
-                <li class="nav-list-item"><a href="#map">Map</a></li>
-                <li class="nav-list-item"><a href="#zoos">Zoos</a></li>
-                <li class="nav-list-item"><a href="#donate">Donate</a></li>
-                <li class="nav-list-item"><a href="#contact">Contact us</a></li>
-            </ul>
-        </nav>
-        <a class="design-link" href="https://www.figma.com/file/jfEFwkXVj1WRq7sUHDr8os/PetStory-online">Designed by <span>&copy;</span></a>
-    </header>
-    <main>
-        <section class="watch">
-            <h2 class="watch-header">
-                Watch your <span>favorite</span> animal online
-            </h2>
-            <button class="watch-online">watch online</button>
-        </section>
-    </main>
+  <header>
+
+    <a href="#about">
+      <div class="logo">
+        <h1 class="logo-text">PetStory online</h1>
+      </div>
+    </a>
+
+    <nav>
+      <ul class="nav-list">
+        <li class="nav-list-item active-link"><a href="#about">About</a></li>
+        <li class="nav-list-item"><a href="#map">Map</a></li>
+        <li class="nav-list-item"><a href="#zoos">Zoos</a></li>
+        <li class="nav-list-item"><a href="#donate">Donate</a></li>
+        <li class="nav-list-item"><a href="#contact">Contact us</a></li>
+      </ul>
+    </nav>
+    <a class="design-link" href="https://www.figma.com/file/jfEFwkXVj1WRq7sUHDr8os/PetStory-online">Designed by
+      <span>&copy;</span></a>
+  </header>
+  <main>
+    <section class="watch">
+      <h2 class="watch-header">
+        Watch your <span>favorite</span> animal online
+      </h2>
+      <button class="watch-online">watch online</button>
+    </section>
+  </main>
 </body>
+
 </html>
